app-test/testdata/typesystem/neg/type-comparison-any-type-with-any-type/src/cmp.cal
namespace cmp:
    type T : (int a, bool b) end
    type U : A | B(float f) end
    actor AnyTypeWithAnyType() ==> bool OUT:
        do
            OUT <-- 1 = false; // error
        end
    end
end